feature/refact-swagger: Refact code and swagger
